unpackaged/objects/Campaign.object
<CustomObject>
  <fields>
    <fullName>Meals_Included__c</fullName>
    <label>Meals Included</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Breakfast</fullName>
        </value>
        <value>
          <fullName>Lunch</fullName>
        </value>
        <value>
          <fullName>Dinner</fullName>
        </value>
        <value>
          <fullName>Breakfast &amp; Lunch</fullName>
        </value>
        <value>
          <fullName>Lunch &amp; Dinner</fullName>
        </value>
        <value>
          <fullName>Breakfast, Lunch &amp; Dinner</fullName>
        </value>
        <value>
          <fullName>None</fullName>
        </value>
        <value>
          <fullName>All meals during event.</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Minimal_Participants_reached__c</fullName>
    <formula>of_Event_Attendees__c  &gt;=  Minimal_Participants_required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minimal # Participants reached?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Minimal_Participants_required__c</fullName>
    <label>Minimal # Participants required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Multiple_Sessions_Logistics_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if speaker is engaged at several sessions at this event - means that logistics details are captured in the data of this session.</inlineHelpText>
    <label>Multiple Sessions - Logistics Details</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>My_Campaigns_Campaign_Coordinator__c</fullName>
    <formula>IF( $User.Id =  Campaign_Coordinator__r.Id || $User.Id =     HQ_Campaign_Coordinator__c    , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Campaigns (Campaign Coordinator)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>NA_Co_Sponsor_of_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NA: Co-Sponsor of Event</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaigns (NA: Co-Sponsor of Event)</relationshipLabel>
    <relationshipName>CampaignsSponsorship</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>NA_Initiative__c</fullName>
    <label>NA: Initiative</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>GP Education</fullName>
        </value>
        <value>
          <fullName>CEREC GP</fullName>
        </value>
        <value>
          <fullName>GP Base Business</fullName>
        </value>
        <value>
          <fullName>GP Bundles</fullName>
        </value>
        <value>
          <fullName>Specialist Education</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>NA_Materials__c</fullName>
    <inlineHelpText>After this form is saved, please attach the appropriate forms to this record to request Hands-on Material, literature, promo-items or Display Materials</inlineHelpText>
    <label>NA: Materials</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Hands-on Material</fullName>
        </value>
        <value>
          <fullName>Literature</fullName>
        </value>
        <value>
          <fullName>Promo items</fullName>
        </value>
        <value>
          <fullName>Quickscreen and/or 10 ft pop-up</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>NA_Program_Module__c</fullName>
    <label>NA: Program Module</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Implant diagnosis and treatment planning for single-tooth restorations</fullName>
        </value>
        <value>
          <fullName>The evolution of single tooth implant-supported restorations</fullName>
        </value>
        <value>
          <fullName>Bone grafting techniques for restorative success with implant therapy</fullName>
        </value>
        <value>
          <fullName>Digital solutions for single-tooth restorations</fullName>
        </value>
        <value>
          <fullName>Implant therapy for the edentulous patient: A review of the latest workflow and treatment options</fullName>
        </value>
        <value>
          <fullName>The fully-edentulous patient: Optimizing treatment outcomes with digital technology</fullName>
        </value>
        <value>
          <fullName>Redefining stability and comfort: The latest patient-specific edentulous solution</fullName>
        </value>
        <value>
          <fullName>Treatment of the edentulous patient using angled implants: Combining technology and design</fullName>
        </value>
        <value>
          <fullName>Custom program (requires RM and Director approval)</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Name_of_Venue__c</fullName>
    <description>Used for the Activity Request form in North America, populated by the DM. Workflow updates the Venue Lookup field</description>
    <inlineHelpText>If Venue is yet to be determined, please indicated "TBD"</inlineHelpText>
    <label>Name of Venue</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Notify_Dealer_Sales_Rep_by_Email__c</fullName>
    <label>Notify Dealer Sales Rep by Email?</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>Yes_No</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>OBTURATION_CALAMUS_BEEFILL_FR__c</fullName>
    <label>OBTURATION CALAMUS/BEEFILL (FR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>OBTURATION_FR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be used for PREP in France</description>
    <label>OBTURATION (FR)</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>OBTURATION_OBTURATORS_FR__c</fullName>
    <label>OBTURATION OBTURATORS (FR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>OBTURATION_POST_SPACE_BUR_FR__c</fullName>
    <label>OBTURATION POST SPACE BUR (FR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>OBTURATION_RANGE_TO_CHECK_FR__c</fullName>
    <label>OBTURATION RANGE TO CHECK (FR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>OBTURATION_TANKS_THERMAPREP_FR__c</fullName>
    <label>OBTURATION TANKS THERMAPREP (FR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>OBTURATION_THERMACUT_FR__c</fullName>
    <label>OBTURATION THERMACUT (FR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>OBTURATION_THERMAFILS_FR__c</fullName>
    <label>OBTURATION THERMAFILS (FR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>OBTURATION_TOP_SEAL_FR__c</fullName>
    <label>OBTURATION TOP SEAL (FR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>OTHER_MATERIAL_QUANTITY_AND_NAME__c</fullName>
    <label>Other Material (Quantity and Name)</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Open_Program_Post_on_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used on NA Activity Request Form</description>
    <inlineHelpText>Check if you'd like this posted, otherwise leave blank</inlineHelpText>
    <label>Open Program - Post on Website?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Organizer_additional_information_AT__c</fullName>
    <description>Information concerning the organizer(s)</description>
    <label>Organizer additional information (AT)</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Other_Actual__c</fullName>
    <label>Other/Uncategorized (Actual)</label>
    <summarizedField>Cost_Revenue_Transaction__c.Amount__c</summarizedField>
    <summaryFilterItems>
      <field>Cost_Revenue_Transaction__c.Type__c</field>
      <operation>equals</operation>
      <value>Other/Uncategorized</value>
    </summaryFilterItems>
    <summaryForeignKey>Cost_Revenue_Transaction__c.Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Other_Budget__c</fullName>
    <label>Other/Uncategorized (Budget)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Other_Cost_Notes__c</fullName>
    <description>Used on NA Activity Request Form</description>
    <label>Other Cost Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Other_Implant_Companies_in_the_Area__c</fullName>
    <description>Used for the Activity Request form in North America</description>
    <inlineHelpText>Other Implant Companies with a strong presence in your area</inlineHelpText>
    <label>Other Implant Companies in the Area</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Other__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Delete Q3 2017 if not used</description>
    <label>Other - TO BE DELETED</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Other_equipment_Name_FR__c</fullName>
    <description>Used in France to bring equipment to Campaigns</description>
    <label>Other equipment Name (FR)</label>
    <length>50</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Other_equipment_Number_FR__c</fullName>
    <description>Used in France to bring equipment to Campaigns</description>
    <label>Other equipment Number (FR)</label>
    <length>20</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Other_equipment_Quantity_FR__c</fullName>
    <description>Used in France to bring equipment to Campaigns</description>
    <label>Other equipment Quantity (FR)</label>
    <length>20</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Overall_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overall Agreement</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Owner_Region__c</fullName>
    <formula>text(Owner.Region__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Region</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Owner_User_Country__c</fullName>
    <description>The Owners' User Country. Use in reports to split campaigns by country</description>
    <formula>TEXT(Owner.User_Country__c)</formula>
    <inlineHelpText>The Owners' User Country.</inlineHelpText>
    <label>Owner User Country</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>PREP__c</fullName>
    <description>To be used for PREP in France</description>
    <label>PREP BRAND (FR)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>WOG</fullName>
        </value>
        <value>
          <fullName>Reciproc Blue</fullName>
        </value>
        <value>
          <fullName>PTG</fullName>
        </value>
        <value>
          <fullName>PTN</fullName>
        </value>
        <value>
          <fullName>PTU RTE</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Pack_Empreinte_FR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used only in France</description>
    <label>Pack Empreinte (FR)</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Pack_Hygiene_FR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used only in France</description>
    <label>Pack Hygiene (FR)</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Parent_Campaign_DI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link the Campaign to an overall Parent Campaign. Used for e.g. large congresses, road-shows or modular courses to collect several Campaigns under one "umbrella".</description>
    <inlineHelpText>Link the Campaign to an overall Parent Campaign. Used for e.g. large congresses, road-shows or modular courses to collect several Campaigns under one "umbrella".</inlineHelpText>
    <label>Parent Campaign</label>
    <lookupFilter>
      <active>true</active>
      <filterItems>
        <field>Campaign.RecordTypeId</field>
        <operation>equals</operation>
        <value>Parent Campaign</value>
      </filterItems>
      <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Parent_Campaign_ID_DI__c</fullName>
    <description>Displays the Parent Campaign ID. Used for custom links reports at the Parent Campaign</description>
    <formula>Parent_Campaign_DI__r.Id</formula>
    <inlineHelpText>Displays the Parent Campaign ID</inlineHelpText>
    <label>Parent Campaign ID</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Parent_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used on sessions to show what Campaign is the parent Campaign</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Campaign</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Participating_Accounts__c</fullName>
    <description>For internal use only</description>
    <label>Participating Accounts</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Participation_Fees_Actual_Formula__c</fullName>
    <description>Formula to use get a postive value for Participation fees</description>
    <formula>0- Participation_Fees_Actual__c</formula>
    <label>Participation Fees (Actual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Participation_Fees_Actual__c</fullName>
    <label>Participation Fees (Actual)</label>
    <summarizedField>Cost_Revenue_Transaction__c.Amount__c</summarizedField>
    <summaryFilterItems>
      <field>Cost_Revenue_Transaction__c.Type__c</field>
      <operation>equals</operation>
      <value>Participation Fees</value>
    </summaryFilterItems>
    <summaryForeignKey>Cost_Revenue_Transaction__c.Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Participation_Fees_Budget__c</fullName>
    <label>Participation Fees (Budget)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Pig_Jaws_FR__c</fullName>
    <label>Pig Jaws (FR)</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Post_event_registration_to_council__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fill in after an event if you sent the regulatory information to the order council</description>
    <inlineHelpText>Fill in after an event if you sent the regulatory information to the order council</inlineHelpText>
    <label>Post event registration to council (FR)</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Preferred_Program_Dates__c</fullName>
    <inlineHelpText>Please be as specific as you can. Dates should not be seen as confirmed until confirmation received.</inlineHelpText>
    <label>Preferred Program Date/s</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Preferred_Program_Lenght__c</fullName>
    <defaultValue>"Please enter preferred program length."</defaultValue>
    <label>Preferred Program Length</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Primary_Contact_Person_at_Venue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact Person at Venue</label>
    <lookupFilter>
      <active>true</active>
      <filterItems>
        <field>Contact.AccountId</field>
        <operation>equals</operation>
        <valueField>$Source.Venue__c</valueField>
      </filterItems>
      <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaigns (Primary Contact Person at Venue)</relationshipLabel>
    <relationshipName>Campaigns1</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Primary_Hotel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Hotel</label>
    <lookupFilter>
      <active>true</active>
      <filterItems>
        <field>Account.RecordTypeId</field>
        <operation>equals</operation>
        <value>CIM Account, Partner</value>
      </filterItems>
      <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaigns (Primary Hotel)</relationshipLabel>
    <relationshipName>Campaigns1</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Primary_Language__c</fullName>
    <label>Primary Language</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Danish</fullName>
        </value>
        <value>
          <fullName>Dutch</fullName>
        </value>
        <value>
          <fullName>English</fullName>
        </value>
        <value>
          <fullName>Finnish</fullName>
        </value>
        <value>
          <fullName>French</fullName>
        </value>
        <value>
          <fullName>German</fullName>
        </value>
        <value>
          <fullName>Italian</fullName>
        </value>
        <value>
          <fullName>Norwegian</fullName>
        </value>
        <value>
          <fullName>Polish</fullName>
        </value>
        <value>
          <fullName>Russian</fullName>
        </value>
        <value>
          <fullName>Spanish</fullName>
        </value>
        <value>
          <fullName>Swedish</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Printing_and_Mailing_Cost_Notes__c</fullName>
    <description>Used on NA Activity Request Form</description>
    <label>Mailing and Printing Cost Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Product_Area__c</fullName>
    <label>Product Area</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Dental</fullName>
          <default>true</default>
          <label>Dental</label>
        </value>
        <value>
          <fullName>Surgery</fullName>
        </value>
        <value>
          <fullName>Urology</fullName>
        </value>
        <value>
          <fullName>Urology (UK)</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Product_Focus_CDCM__c</fullName>
    <description>Product list for users to pick the focus of the Campaign. This list is intended to be a copy of the list for CFEs, and dependent on country (Campaign Owner Country) - just as a CFE is dependent on Assigned To Country.</description>
    <inlineHelpText>Pick the products in focus for this Campaign.</inlineHelpText>
    <label>Product Focus (CDCM)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <controllingField>Country__c</controllingField>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>CEREC</fullName>
        </value>
        <value>
          <fullName>Omnicam</fullName>
        </value>
        <value>
          <fullName>InLab</fullName>
        </value>
        <value>
          <fullName>Primescan</fullName>
        </value>
        <value>
          <fullName>InLab Profire</fullName>
        </value>
        <value>
          <fullName>InEos X5</fullName>
        </value>
        <value>
          <fullName>InLab MCXL</fullName>
        </value>
        <value>
          <fullName>InLab MCX5</fullName>
        </value>
        <value>
          <fullName>InFire HTC</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Product_Focus_ENDO__c</fullName>
    <description>Product list for users to pick the focus of the Campaign. This list is intended to be a copy of the list for CFEs, and dependent on country (Campaign Owner Country) - just as a CFE is dependent on Assigned To Country.</description>
    <inlineHelpText>Pick the products in focus for this Campaign.</inlineHelpText>
    <label>Product Focus (ENDO)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <controllingField>Country__c</controllingField>
      <restricted>true</restricted>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>EF1123 - Universal</fullName>
        </value>
        <value>
          <fullName>EF1124 - NEXT</fullName>
        </value>
        <value>
          <fullName>EF1210 - WaveOne</fullName>
        </value>
        <value>
          <fullName>EF1211 - GOLD</fullName>
        </value>
        <value>
          <fullName>EF1721 - Universal HF</fullName>
        </value>
        <value>
          <fullName>EF1820 - ProGlider</fullName>
        </value>
        <value>
          <fullName>EF2990 - MAccess</fullName>
        </value>
        <value>
          <fullName>EF2A60 - MAccess</fullName>
        </value>
        <value>
          <fullName>EF2D60 - MAccess</fullName>
        </value>
        <value>
          <fullName>EO3210 - GuttaCore</fullName>
        </value>
        <value>
          <fullName>EO8320 - AH26/AH PLUS JET</fullName>
        </value>
        <value>
          <fullName>EQ2110 - Propex</fullName>
        </value>
        <value>
          <fullName>EQ2111 - Pixi</fullName>
        </value>
        <value>
          <fullName>EQ4240 - X-Smart</fullName>
        </value>
        <value>
          <fullName>EQ4241 - PLUS</fullName>
        </value>
        <value>
          <fullName>EQ4242 - IQ</fullName>
        </value>
        <value>
          <fullName>EQ4310 - X-Smart</fullName>
        </value>
        <value>
          <fullName>EQ4311 - PLUS</fullName>
        </value>
        <value>
          <fullName>EQ4312 - IQ</fullName>
        </value>
        <value>
          <fullName>Glide path files</fullName>
        </value>
        <value>
          <fullName>Guttacore &amp; plastic obturation</fullName>
        </value>
        <value>
          <fullName>Gutta Core Pink</fullName>
        </value>
        <value>
          <fullName>Gutta-Smart</fullName>
        </value>
        <value>
          <fullName>Hands Files</fullName>
        </value>
        <value>
          <fullName>Kits &amp; Motors</fullName>
        </value>
        <value>
          <fullName>NiTi rotary files</fullName>
        </value>
        <value>
          <fullName>other endo equipment</fullName>
        </value>
        <value>
          <fullName>Pro Glider</fullName>
        </value>
        <value>
          <fullName>PRO ROOT MTA</fullName>
        </value>
        <value>
          <fullName>PROTAPER (incl. SX/Retreatment)</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Product_Focus_IMAG__c</fullName>
    <description>Product list for users to pick the focus of the Campaign. This list is intended to be a copy of the list for CFEs, and dependent on country (Campaign Owner Country) - just as a CFE is dependent on Assigned To Country.</description>
    <inlineHelpText>Pick the products in focus for this Campaign.</inlineHelpText>
    <label>Product Focus (IMAG)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <controllingField>Country__c</controllingField>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Orthophos</fullName>
        </value>
        <value>
          <fullName>Galileos</fullName>
        </value>
        <value>
          <fullName>Intra Oral</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Product_Focus_INST__c</fullName>
    <description>Product list for users to pick the focus of the Campaign. This list is intended to be a copy of the list for CFEs, and dependent on country (Campaign Owner Country) - just as a CFE is dependent on Assigned To Country.</description>
    <inlineHelpText>Pick the products in focus for this Campaign.</inlineHelpText>
    <label>Product Focus (INST)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <controllingField>Country__c</controllingField>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>SIROlaser</fullName>
          <label>SiroLaser</label>
        </value>
        <value>
          <fullName>DAC</fullName>
        </value>
        <value>
          <fullName>Instrument</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Product_Focus_ORTH__c</fullName>
    <description>Product list for users to pick the focus of the Campaign. This list is intended to be a copy of the list for CFEs, and dependent on country (Campaign Owner Country) - just as a CFE is dependent on Assigned To Country.</description>
    <inlineHelpText>Pick the products in focus for this Campaign.</inlineHelpText>
    <label>Product Focus (ORTH)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <controllingField>Country__c</controllingField>
      <restricted>true</restricted>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Accu Arch</fullName>
        </value>
        <value>
          <fullName>Accu Force</fullName>
        </value>
        <value>
          <fullName>ADHESIVES &amp; CEMENTS</fullName>
        </value>
        <value>
          <fullName>Allure</fullName>
        </value>
        <value>
          <fullName>APPLIANCE CASES</fullName>
        </value>
        <value>
          <fullName>Bands</fullName>
        </value>
        <value>
          <fullName>BBC</fullName>
        </value>
        <value>
          <fullName>Bio-Bite Correctors (Class II Correctors)</fullName>
        </value>
        <value>
          <fullName>Bondable Tubes</fullName>
        </value>
        <value>
          <fullName>Bonding/Etchant</fullName>
        </value>
        <value>
          <fullName>Buttons</fullName>
        </value>
        <value>
          <fullName>CB3</fullName>
        </value>
        <value>
          <fullName>CB7</fullName>
        </value>
        <value>
          <fullName>Clear BKT</fullName>
        </value>
        <value>
          <fullName>CURING LIGHTS</fullName>
        </value>
        <value>
          <fullName>Digital/Techno</fullName>
        </value>
        <value>
          <fullName>DISPENSER</fullName>
        </value>
        <value>
          <fullName>Dry Field/DB</fullName>
        </value>
        <value>
          <fullName>DSKK Buccal Tubes</fullName>
        </value>
        <value>
          <fullName>DSKK Metal BKT</fullName>
        </value>
        <value>
          <fullName>DSKK SUS Wire</fullName>
        </value>
        <value>
          <fullName>ELASTICS</fullName>
        </value>
        <value>
          <fullName>GAC Buccal Tubes</fullName>
        </value>
        <value>
          <fullName>GAC Elastomerics</fullName>
        </value>
        <value>
          <fullName>Generus II &amp; Balance Brackets</fullName>
        </value>
        <value>
          <fullName>Ideal Bands</fullName>
        </value>
        <value>
          <fullName>IMPRESSION MATERIALS</fullName>
        </value>
        <value>
          <fullName>In-Ovation</fullName>
        </value>
        <value>
          <fullName>In-Ovation C</fullName>
        </value>
        <value>
          <fullName>In-Ovation L</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Product_Focus_PREV__c</fullName>
    <description>Product list for users to pick the focus of the Campaign. This list is intended to be a copy of the list for CFEs, and dependent on country (Campaign Owner Country) - just as a CFE is dependent on Assigned To Country.</description>
    <inlineHelpText>Pick the products in focus for this Campaign.</inlineHelpText>
    <label>Product Focus (PREV)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <controllingField>Country__c</controllingField>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Anestethics</fullName>
        </value>
        <value>
          <fullName>Prophy</fullName>
        </value>
        <value>
          <fullName>Infection Control</fullName>
        </value>
        <value>
          <fullName>Fluorides</fullName>
        </value>
        <value>
          <fullName>Scaling</fullName>
        </value>
        <value>
          <fullName>X-Ray</fullName>
        </value>
        <value>
          <fullName>MIDWEST RDH Freedom</fullName>
        </value>
        <value>
          <fullName>Cavitron</fullName>
        </value>
        <value>
          <fullName>PS2120 - Jet-Plus</fullName>
        </value>
        <value>
          <fullName>PS2130 - Plus</fullName>
        </value>
        <value>
          <fullName>PS2140 - Select SPS</fullName>
        </value>
        <value>
          <fullName>PS2150 - Bobcat 25K</fullName>
        </value>
        <value>
          <fullName>PS3300 - SLI/TFI 30K</fullName>
        </value>
        <value>
          <fullName>PS3400 - 25K</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Product_Focus_PROS__c</fullName>
    <description>Product list for users to pick the focus of the Campaign. This list is intended to be a copy of the list for CFEs, and dependent on organizing country (Campaign Owner Country) - just as a CFE is dependent on Assigned To Country.</description>
    <inlineHelpText>Pick the products in focus for this Campaign.</inlineHelpText>
    <label>Product Focus (PROS)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <controllingField>Country__c</controllingField>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Porcelain</fullName>
        </value>
        <value>
          <fullName>All Ceramics</fullName>
        </value>
        <value>
          <fullName>Teeth</fullName>
        </value>
        <value>
          <fullName>Acrylics</fullName>
        </value>
        <value>
          <fullName>MIYABI/MIYABI Temporary (incl.</fullName>
        </value>
        <value>
          <fullName>ECLIPSE</fullName>
        </value>
        <value>
          <fullName>CELTRA DUO</fullName>
        </value>
        <value>
          <fullName>RADICA</fullName>
        </value>
        <value>
          <fullName>QUASER</fullName>
        </value>
        <value>
          <fullName>LF2110 - disk 105</fullName>
        </value>
        <value>
          <fullName>LF2210 - ht disk 105</fullName>
        </value>
        <value>
          <fullName>LF2220 - ht disk 98</fullName>
        </value>
        <value>
          <fullName>LF3210 - Cercon Ceram Kiss</fullName>
        </value>
        <value>
          <fullName>LF3240 - Duceram Kiss</fullName>
        </value>
        <value>
          <fullName>LF32D0 - Ceramco 3</fullName>
        </value>
        <value>
          <fullName>LF6100 - CoCr Alloys</fullName>
        </value>
        <value>
          <fullName>LF6200 - NiCr Alloys</fullName>
        </value>
        <value>
          <fullName>LF7100 - Celtra Press</fullName>
        </value>
        <value>
          <fullName>LR3110 - Lucitone 199</fullName>
        </value>
        <value>
          <fullName>LR3410 - Lucitone FRS</fullName>
        </value>
        <value>
          <fullName>LR3540 - Lucitone 199</fullName>
        </value>
        <value>
          <fullName>LR4245 - Cosmo HXL</fullName>
        </value>
        <value>
          <fullName>Precious Metal Alloys</fullName>
        </value>
        <value>
          <fullName>Stuctured Materials</fullName>
        </value>
        <value>
          <fullName>Consumables lab</fullName>
        </value>
        <value>
          <fullName>Equipment fixed</fullName>
        </value>
        <value>
          <fullName>Celtra</fullName>
        </value>
        <value>
          <fullName>Non Precious Metal Alloys</fullName>
        </value>
        <value>
          <fullName>Attachements</fullName>
        </value>
        <value>
          <fullName>Denture Base</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
</CustomObject>